# openrave_test

./: CMakeLists.txt  README.md  package.xml
config/: menu.yaml
euslisp/: eusjsk-recognition.l  look-around.l  rrt-grasp.l  sample-grasp.l  utility.l
launch/: boundingbox_filter.launch  kinfu.launch  kinfu2.launch  kinfu_hrp2.launch  server.launch  server2.launch  setup_object.sh  table_icp.launch  transformable_select_box.launch
moseg/TrainingSet/Data/fromrobot/: fromrobot.bmf
msg/: RaveGraspArray.msg
sample/: install_sample.sh
scripts/: boundingbox_publisher.py  file_getter.py  grasp_finder_node.py  grasp_finder_with_load.py  grasp_finder_with_load_save.py  grasp_finder_with_rrt_node.py  hand_and_world.env.xml  hand_and_world.env.xml.in  hrp.env.xml  hrp.env.xml.in  hrp_hand.xml  hrp_hand_l.xml.in  hrp_hand_left.xml  hrp_hand_r.xml.in  kinfu_mesh.kinbody.xml  kinfu_mesh.kinbody.xml.in  kinfu_mesh0.kinbody.xml  kinfu_mesh0.kinbody.xml.in  kinfu_mesh_estimated.kinbody.xml  kinfu_mesh_estimated.kinbody.xml.in  mesh2.dae  model.kinbody.xml  openrave_test_utility.py  re_do_calc.sh  re_save_figs.sh  test_hrp_grasp.py  test_hrp_single_grasp.py  tmp_model.urdf  tmp_model_estimated.urdf  tmp_world.kinbody.xml  triger_base_map.py  visualize_grasp_result.py
src/: ply_clipper.cpp  second_grasp_finder.cpp  test_opencv.cpp
srv/: GraspAssess.srv  SecondGrasp.srv
