<?xml version="1.0"?>
<package>
  <name>openrave_test</name>
  <version>0.0.0</version>
  <description>The openrave_test package</description>

  <maintainer email="leus@todo.todo">leus</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
