<?xml version="1.0"?>
<package>
  <name>openrave_test</name>
  <version>0.0.0</version>
  <description>The openrave_test package</description>

  <maintainer email="leus@todo.todo">leus</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>hrpsys_ros_bridge_tutorials</build_depend>
  <build_depend>rospack</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>hrpsys_ros_bridge_tutorials</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>openrave</run_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>
  <export>
  </export>
</package>
